--- a/miniprogram/pages/user-center/index.wxss
+++ b/miniprogram/pages/user-center/index.wxss
@@ -26,25 +26,32 @@
   padding: 0rpx 60rpx;
 }
 
-.avatar {
-  width: 128rpx;
-  height: 128rpx;
-  /* background-color: #e5e5e5; */
-  border-radius: 50%;
-  transform: scale(1.8);
-}
+.avatar-wrapper {
+    padding: 0;
+    width: 100px !important;
+    border-radius: 50%;
+  }
+  
+  .avatar {
+    display: block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
 
 .username {
   color: #333;
-  font-size: 32rpx;
+  font-size: 35rpx;
   margin-top: 20rpx;
   color: rgba(0, 0, 0, 0.9);
-  max-width: 200rpx;
+  max-width: 250rpx !important;
+  margin-left: 15rpx;
 }
-
+.btnSaved{
+}
 .settings_container {
   position: relative;
-  top: 150rpx;
+  top: 200rpx;
   padding: 0 40rpx;
   display: flex;
   flex-direction: column;
