--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,20 +1,7 @@
+<!-- pages/index/index.wxml -->
 <view class="container">
-  <!-- 顶部选项卡 -->
-  <scroll-view scroll-x="true" class="tabs" scroll-with-animation scroll-left="{{scrollLeft}}">
-    <view wx:for="{{tabs}}" wx:key="index" class="tab {{currentTab === index ? 'active' : ''}}" bindtap="switchTab" data-index="{{index}}">
-      <text>{{item.name}}</text>
-    </view>
-  </scroll-view>
-
-  <!-- 内容区域 -->
-  <swiper class="content" current="{{currentTab}}" duration="300" bindchange="swiperChange" style="height: {{swiperHeight}}px;">
-    <swiper-item wx:for="{{jobLists}}" wx:key="index">
-      <view class="item">
-        <text>{{jobLists[index][0].title}},</text>
-        <text>{{jobLists[index][0].salary}},</text>
-        <text>{{jobLists[index][0].route}},</text>
-        <text>{{jobLists[index][0].date}}</text>
-      </view>
-    </swiper-item>
-  </swiper>
+  <view class="buttons">
+    <button bindtap="goToRecruit">我要招聘</button>
+    <button bindtap="goToJob">我要求职</button>
+  </view>
 </view>
