--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,6 +1,7 @@
 <!-- pages/index/index.wxml -->
 <view class="container">
   <view class="buttons">
+      <view>pages/index/index.wxml </view>
     <button bindtap="goToRecruit">我要招聘</button>
     <button bindtap="goToJob">我要求职</button>
   </view>
