--- a/miniprogram/pages/publishJobPost/publishJobPost.wxml
+++ b/miniprogram/pages/publishJobPost/publishJobPost.wxml
@@ -1,2 +1,71 @@
-<!--pages/publishJobPost/publishJobPost.wxml-->
-<text>pages/publishJobPost/publishJobPost.wxml</text>
+<view class="container">
+    <!-- 招聘岗位 -->
+    <view class="section">
+        <text class="label">招聘岗位</text>
+        <view class="picker-group">
+            <picker class="picker-box" mode="selector" range="{{jobCategories}}" range-key="cate_name" bindchange="handleJobCategoryChange">
+                <view class="picker">
+                    {{selectedJobCategory ? selectedJobCategory : '请选择类别'}}
+                </view>
+            </picker>
+            <picker class="picker-box" mode="selector" range="{{jobTypes}}" range-key="job_name" bindchange="handleJobTypeChange">
+                <view class="picker">
+                    {{selectedJobType ? selectedJobType : '请选择岗位'}}
+                </view>
+            </picker>
+        </view>
+    </view>
+
+    <!-- 航线信息 -->
+    <view class="section">
+        <text class="label">航线信息</text>
+        <view class="input-group">
+            <input placeholder="请输入起点" value="{{routeFrom}}" bindinput="handleRouteFromInput" class="input" />
+            <text class="arrow">→</text>
+            <input placeholder="请输入终点" value="{{routeTo}}" bindinput="handleRouteToInput" class="input" />
+        </view>
+    </view>
+
+    <!-- 上船时间地点 -->
+    <view class="section">
+        <text class="label">上船时间地点</text>
+        <view class="picker-group">
+            <picker class="picker-box" mode="date" bindchange="handleDateChange">
+                <view class="picker">
+                    {{selectedDate ? selectedDate : '请选择上船时间'}}
+                </view>
+            </picker>
+            <input placeholder="请输入上船地点" value="{{selectedLocation}}" bindinput="handleLocationChange" class="input" />
+        </view>
+    </view>
+
+    <!-- 待遇 -->
+    <view class="section">
+        <text class="label">待遇</text>
+        <view class="picker-group">
+            <picker class="picker-box" mode="selector" range="{{salaryOptions}}" bindchange="handleSalaryChange">
+                <view class="picker">
+                    {{selectedSalary ? selectedSalary : '请选择天/月'}}
+                </view>
+            </picker>
+            <input placeholder="请输入具体金额" value="{{selectedMoney}}" bindinput="handleMoneyChange" class="input" />
+        </view>
+    </view>
+
+    <!-- 输入手机号 -->
+    <view class="section">
+        <text class="label">手机号</text>
+        <view class="picker-group">
+            <input placeholder="请输入手机号" value="{{mobilePhone}}" bindinput="handlemobilePhoneChange" class="input" />
+        </view>
+    </view>
+
+    <!-- 岗位描述 -->
+    <view class="section">
+        <text class="label">岗位描述</text>
+        <textarea placeholder="请输入岗位描述" value="{{jobDescription}}" bindinput="handleJobDescriptionInput" auto-height class="textarea" />
+    </view>
+
+    <!-- 保存提交按钮 -->
+    <button class="submit-btn" bindtap="handleSubmit">保存提交</button>
+</view>
