--- a/miniprogram/pages/publishJobSeeking/publishJobSeeking.wxss
+++ b/miniprogram/pages/publishJobSeeking/publishJobSeeking.wxss
@@ -1,1 +1,64 @@
 /* pages/publishJobSeeking/publishJobSeeking.wxss */
+.container {
+    padding: 20px;
+}
+
+.section {
+    width: 100%;
+    margin-bottom: 20px;
+}
+.title{
+    width: 100%;
+    font-weight: bolder;
+    margin-bottom: 20rpx;
+    font-size: 35rpx;
+}
+.section-title {
+    width: 100%;
+    display: inline-block;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.input {
+    display: block;
+    float: left;
+    width: 40%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 20rpx;
+    text-align: center;
+}
+.single{
+    width: 90%;
+}
+.picker-box{
+    width: 100%;
+    overflow: hidden;
+}
+.picker-item{
+    width: 50%;
+    float: left;
+    text-align: center;
+}
+.picker {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+textarea {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    width: 90%;
+}
+
+button {
+    background-color: #007aff;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+}
