--- a/miniprogram/pages/user-center/index.wxml
+++ b/miniprogram/pages/user-center/index.wxml
@@ -19,45 +19,17 @@
             </block>
         </view>
         <view class="settings_container">
-            <!-- <view class="setting_item">
-        <view class="left">
-          <image class="setting_icon" src="../../images/icons/setting.svg" />
-          <view class="setting_text">个人信息设置</view>
-        </view>
-        <image class="arrow_icon" src="../../images/arrow.svg" />
-      </view> -->
-            <!-- <view class="setting_item">
-        <view class="left">
-          <image class="setting_icon" src="../../images/icons/question.svg" />
-          <view class="setting_text">常见问题</view>
-        </view>
-        <image class="arrow_icon" src="../../images/arrow.svg" />
-      </view> -->
-            <view class="setting_item" bind:tap="gotoWxCodePage">
+            <view class="setting_item" bind:tap="toqa">
                 <view class="left">
-                    <image class="setting_icon" src="../../images/icons/customer-service.svg" />
-                    <view class="setting_text">我的简历</view>
+                    <image class="setting_icon" src="../../images/icons/question.svg" />
+                    <view class="setting_text">常见问题</view>
                 </view>
                 <image class="arrow_icon" src="../../images/arrow.svg" />
             </view>
-            <view class="setting_item" bind:tap="gotoWxCodePage">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/customer-service.svg" />
-                    <view class="setting_text">投递记录</view>
-                </view>
-                <image class="arrow_icon" src="../../images/arrow.svg" />
-            </view>
-            <view class="setting_item" bind:tap="gotoWxCodePage">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/customer-service.svg" />
-                    <view class="setting_text">收到的简历</view>
-                </view>
-                <image class="arrow_icon" src="../../images/arrow.svg" />
-            </view>
+
             <view class="setting_item">
                 <view class="left">
                     <image class="setting_icon" src="../../images/icons/customer-service.svg" />
-                    <!-- <view class="setting_text">联系客服</view> -->
                     <button open-type="contact" class="contact-button">
                         联系客服
                     </button>
@@ -67,7 +39,9 @@
             <view class="setting_item" bind:tap="gotoWxCodePage">
                 <view class="left">
                     <image class="setting_icon" src="../../images/icons/share.svg" />
-                    <view class="setting_text">分享小程序</view>
+                    <view class="setting_text">
+                        <button class="contact-button" open-type="share">分享给好友</button>
+                    </view>
                 </view>
                 <image class="arrow_icon" src="../../images/arrow.svg" />
             </view>
