--- a/miniprogram/components/zhaopin/list-item/list-item.wxml
+++ b/miniprogram/components/zhaopin/list-item/list-item.wxml
@@ -1,5 +1,9 @@
 <!--components/zhaopin/list-item/list-item.wxml-->
 <view class="list-item">
   <view class="title">{{item.title}}</view>
-  <view class="content"> 薪资：{{item.salary}} {{item.route}} {{item.date}}</view>
+  <view class="content">
+    <text> 薪资：{{item.salary}}元 </text>
+    <text> 地点：{{item.selectedLocation}}</text>
+    <text> 日期：{{item.date}} </text>
+  </view>
 </view>
