--- a/miniprogram/pages/publishJobSeeking/publishJobSeeking.wxml
+++ b/miniprogram/pages/publishJobSeeking/publishJobSeeking.wxml
@@ -58,7 +58,7 @@
     <view class="section">
         <text class="section-title">特长技能描述</text>
         <view class="picker-box">
-            <textarea placeholder="请输入特长技能描述" bindinput="bindSkillInput" value="{{skill}}"  maxlength="50" auto-height />
+            <textarea placeholder="请输入特长技能描述" bindinput="bindSkillInput" value="{{skill}}"  maxlength="50"  />
             <view>已输入 {{charCount}}/50 字</view>
         </view>
     </view>
