--- a/miniprogram/pages/publishJobSeeking/publishJobSeeking.wxss
+++ b/miniprogram/pages/publishJobSeeking/publishJobSeeking.wxss
@@ -1,6 +1,7 @@
 /* pages/publishJobSeeking/publishJobSeeking.wxss */
 .container {
     padding: 20px;
+    background-color: #fff;
 }
 
 .section {
