--- a/miniprogram/pages/post/index.wxss
+++ b/miniprogram/pages/post/index.wxss
@@ -9,8 +9,66 @@
     width: 100%;
 }
 .list-item{
-    padding: 10rpx 20rpx;
+    padding: 20rpx;
+    border-bottom: 1rpx solid #eee;
+    margin-bottom: 20rpx;
 }
+.title-box{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20rpx;
+}
+.item{
+    font-size: 28rpx;
+    display: flex;
+    justify-content: space-between;
+    color: #666;
+}
+.tools text{
+    display: inline-block;
+    margin: 0 15rpx;
+    padding:5rpx 20rpx;
+    border-radius: 8rpx;
+}
+.upState{
+    background-color: aquamarine;
+    color: #27bd72;
+}
+.downState{
+    background-color: red;
+    color: #fff1f0;
+}
+
+.status{
+    font-size: 20rpx;
+    padding:5rpx 10rpx;
+    background-color: green;
+    color: #fff;
+    border-radius: 10rpx;
+    margin-left: 10rpx;
+}
+
+/* '审核中','未过审','已审核','已下线' */
+.status-0 {
+    background-color: #e6f7ff;
+    color: #1890ff;
+}
+
+.status-1 {
+    background-color: #fff1f0;
+    color: #ff4d4f;
+}
+
+.status-2 {
+    background-color: #f6ffed;
+    color: #52c41a;
+}
+
+.status-3 {
+    background-color: #f5f5f5;
+    color: #8c8c8c;
+}
+
 /* 内容区域样式 */
 .content {
     flex: 1;
