--- a/miniprogram/pages/recruiter/recruiter.wxml
+++ b/miniprogram/pages/recruiter/recruiter.wxml
@@ -1,21 +1,29 @@
 <!--pages/recruiter/recruiter.wxml-->
 <view class="container">
-    <!-- 顶部选项卡 -->
-    <scroll-view scroll-x="true" class="tabs" scroll-with-animation scroll-left="{{scrollLeft}}">
-        <view wx:for="{{tabs}}" wx:key="index" class="tab {{currentTab === index ? 'active' : ''}}" bindtap="switchTab" data-index="{{index}}">
-            <text>{{item.name}}</text>
-        </view>
-    </scroll-view>
-    <!-- 内容区域 -->
-    <swiper class="content" current="{{currentTab}}" duration="300" bindchange="swiperChange" style="height: {{swiperHeight}}px;">
-        <swiper-item wx:for="{{jobLists}}" wx:key="index">
-            <view class="item">
-                <block wx:for="{{jobLists[index]}}" wx:key="id">
-                    <list-item item="{{item}}" bind:tap="toDetail" data-id="{{item.id}}"></list-item>
-                </block>
+    <!-- 如果 jobLists 为空，显示“暂无更多数据” -->
+    <view wx:if="{{jobLists.length === 0}}" class="empty-container">
+        <text class="empty-text">暂无更多数据</text>
+    </view>
+
+    <!-- 如果 jobLists 不为空，展示数据 -->
+    <view wx:else>
+        <!-- 顶部选项卡 -->
+        <scroll-view scroll-x="true" class="tabs" scroll-with-animation scroll-left="{{scrollLeft}}">
+            <view wx:for="{{tabs}}" wx:key="index" class="tab {{currentTab === index ? 'active' : ''}}" bindtap="switchTab" data-index="{{index}}">
+                <text>{{item.name}}</text>
             </view>
-        </swiper-item>
-    </swiper>
+        </scroll-view>
+        <!-- 内容区域 -->
+        <swiper class="content" current="{{currentTab}}" duration="300" bindchange="swiperChange" style="height: {{swiperHeight}}px;">
+            <swiper-item wx:for="{{jobLists}}" wx:key="index">
+                <view class="item">
+                    <block wx:for="{{jobLists[index]}}" wx:key="id">
+                        <list-item item="{{item}}" bind:tap="toDetail" data-id="{{item.id}}"></list-item>
+                    </block>
+                </view>
+            </swiper-item>
+        </swiper>
+    </view>
     <!--  未登陆的情况下，展示  -->
     <isLogin isLogin="{{!isLogin}}" bind:toLogin="toLogin" />
 </view>
