--- a/miniprogram/pages/jobseeker/jobseeker.wxml
+++ b/miniprogram/pages/jobseeker/jobseeker.wxml
@@ -1,22 +1,37 @@
-<!--pages/jobseeker/jobseeker.wxml-->
+<!--pages/recruiter/recruiter.wxml-->
 <view class="container">
-    <!-- 顶部选项卡 -->
-    <scroll-view scroll-x="true" class="tabs" scroll-with-animation scroll-left="{{scrollLeft}}">
-        <view wx:for="{{tabs}}" wx:key="index" class="tab {{currentTab === index ? 'active' : ''}}" bindtap="switchTab" data-index="{{index}}">
-            <text>{{item.name}}</text>
-        </view>
-    </scroll-view>
-    <!-- 内容区域 -->
-    <swiper class="content" current="{{currentTab}}" duration="300" bindchange="swiperChange" style="height: {{swiperHeight}}px;">
-        <swiper-item wx:for="{{jobLists}}" wx:key="index">
-            <view class="item">
-                <text>{{jobLists[index][0].title}},</text>
-                <text>{{jobLists[index][0].salary}},</text>
-                <text>{{jobLists[index][0].route}},</text>
-                <text>{{jobLists[index][0].date}}</text>
+    <!-- 如果 jobLists 为空，显示“暂无更多数据” -->
+    <view wx:if="{{jobLists.length === 0}}" class="empty-container">
+        <text class="empty-text">暂无更多数据</text>
+    </view>
+
+    <!-- 如果 jobLists 不为空，展示数据 -->
+    <view class="list-content" wx:else>
+        <!-- 顶部选项卡 -->
+        <scroll-view scroll-x="true" class="tabs" scroll-with-animation scroll-left="{{scrollLeft}}">
+            <view wx:for="{{tabs}}" wx:key="index" class="tab {{currentTab === index ? 'active' : ''}}" bindtap="switchTab" data-index="{{index}}">
+                <text>{{item.name}}</text>
             </view>
-        </swiper-item>
-    </swiper>
+        </scroll-view>
+        <!-- 内容区域 -->
+        <swiper class="content" current="{{currentTab}}" duration="300" bindchange="swiperChange" style="height: {{swiperHeight}}px;">
+            <swiper-item wx:for="{{jobLists}}" wx:key="index">
+                <view class="item">
+                    <!-- <block wx:for="{{jobLists[index]}}" wx:key="id">
+                        <list-item item="{{item}}" bind:tap="toDetail" data-id="{{item.id}}"></list-item>
+                    </block> -->
+                    <view class="list-item" wx:for="{{jobLists[index]}}" wx:key="id">
+                        <view class="item-title">{{item.title}}</view>
+                        <view class="item-content">
+                            <text> 薪资:{{item.salary}}元 </text>
+                            <text> 性别:{{item.selectedGender}}</text>
+                            <text> 年龄:{{item.age}} </text>
+                        </view>
+                    </view>
+                </view>
+            </swiper-item>
+        </swiper>
+    </view>
     <!--  未登陆的情况下，展示  -->
     <isLogin isLogin="{{!isLogin}}" bind:toLogin="toLogin" />
 </view>
