--- a/miniprogram/pages/jobseeker/jobseeker.wxss
+++ b/miniprogram/pages/jobseeker/jobseeker.wxss
@@ -1,9 +1,25 @@
-/* pages/jobseeker/jobseeker.wxss */
+/* pages/recruiter/recruiter.wxss */
 .container {
+    position: relative;
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background-color: #fff;
   }
+
+  /* 居中容器 */
+.empty-container {
+    flex: 1; /* 占据剩余空间 */
+    display: flex;
+    justify-content: center; /* 水平居中 */
+    align-items: center; /* 垂直居中 */
+}
+
+/* 暂无更多数据样式 */
+.empty-text {
+    color: #999;
+    font-size: 14px;
+}
   
   /* 顶部选项卡样式 */
   .tabs {
@@ -30,11 +46,26 @@
     width: 100%;
     background-color: #fff;
   }
-  
-  .item {
+.list-content{
+    width: 100%;
+}
+.list-item {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+}
+.item-title {
+    font-weight: bold;
+    margin-bottom: 20rpx;
+}
+
+.item-content {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    font-size: 18px;
-  }
+    justify-content: space-between;
+    color: #666;
+    font-size: 28rpx;
+}
+
+.item-content text {
+    display: inline-block;
+    margin-right: 30rpx;
+}
