--- a/miniprogram/pages/post/index.wxss
+++ b/miniprogram/pages/post/index.wxss
@@ -31,12 +31,12 @@
     border-radius: 8rpx;
 }
 .upState{
-    background-color: aquamarine;
-    color: #27bd72;
+    background-color: #09BB07;
+    color: #fff;
 }
 .downState{
-    background-color: red;
-    color: #fff1f0;
+    background-color: #F76260;
+    color: #fff;
 }
 
 .status{
@@ -50,23 +50,23 @@
 
 /* '审核中','未过审','已审核','已下线' */
 .status-0 {
-    background-color: #e6f7ff;
-    color: #1890ff;
+    background-color: #10AEFF;
+    color: #fff;
 }
 
 .status-1 {
-    background-color: #fff1f0;
-    color: #ff4d4f;
+    background-color: #C9C9C9;
+    color: #fff;
 }
 
 .status-2 {
-    background-color: #f6ffed;
-    color: #52c41a;
+    background-color: #09BB07;
+    color: #fff;
 }
 
 .status-3 {
-    background-color: #f5f5f5;
-    color: #8c8c8c;
+    background-color: #F76260;
+    color: #fff;
 }
 
 /* 内容区域样式 */
