--- a/miniprogram/pages/publishJobSeeking/publishJobSeeking.wxml
+++ b/miniprogram/pages/publishJobSeeking/publishJobSeeking.wxml
@@ -20,7 +20,7 @@
     <view class="section">
         <text class="section-title">年龄/性别</text>
         <view class="picker-box">
-            <input placeholder="请输入年龄" bindinput="bindYearInput" class="input" />
+            <input type="number" placeholder="请输入年龄" bindinput="bindYearInput" class="input" />
             <picker class="picker-item" mode="selector" range="{{genders}}" bindchange="bindGenderChange">
                 <view class="picker">
                     性别：{{selectedGender}}
