--- a/miniprogram/pages/post/index.wxss
+++ b/miniprogram/pages/post/index.wxss
@@ -3,11 +3,12 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    min-height: 100vh;
     background-color: #fff;
 }
 .empty-status{
-    height: 100%;
-    color: #bbb;
+    height: 100vh;
+    color: #aaa;
     display: flex;
     align-items: center;
     justify-content: center;
