--- a/miniprogram/pages/jobDetail/jobDetail.wxml
+++ b/miniprogram/pages/jobDetail/jobDetail.wxml
@@ -38,6 +38,7 @@
       <text>{{jobDetailInfo.mobilePhone}}</text>
     </view>
   </view>
+    <view class="date">发布时间：{{formattedDate}}</view>
   
   <button bindtap="makePhoneCall">立即联系</button>
 </view>
