--- a/miniprogram/pages/admin/jobIndex/jobIndex.wxml
+++ b/miniprogram/pages/admin/jobIndex/jobIndex.wxml
@@ -1,7 +1,7 @@
 <!--pages/admin/jobIndex/jobIndex.wxml-->
 <view class="container">
     <view class="empty-status" wx:if="{{jobLists.length == 0 }}">暂无需要审核的招聘信息</view>
-    <view class="list-box">
+    <view class="list-box" wx:else>
         <view class="list-item" wx:for="{{jobLists}}" wx:key="index">
             <view wx:for="{{item}}" wx:key="index">
                 <view class="title-box" bind:tap="viewInfo" data-id="{{item.id}}">
