--- a/miniprogram/pages/user-center/index.wxml
+++ b/miniprogram/pages/user-center/index.wxml
@@ -5,11 +5,11 @@
         <view class="userinfo_container">
             <block wx:if="{{!userInfo.userAvatar}}">
                 <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
-                    <image class="avatar" src="{{defAvartarUrl}}"></image>
+                    <image class="avatar" src="{{defAvartarUrl}}" mode="aspectFill"></image>
                 </button>
             </block>
             <block wx:else>
-                <image class="avatar" src="{{userInfo.userAvatar}}"></image>
+                <image class="avatar" src="{{userInfo.userAvatar}}" mode="aspectFill"></image>
             </block>
             <block wx:if="{{ !userInfo.nickName }}">
                 <input class="username" bindinput="onInputNickname" type="nickname" name="nickname" placeholder="请输入昵称" maxlength="5" />
